update tags and documentation
